# cc-vis

./: Justfile  README.md  a.out  compile_flags.txt  foo.cc  main.cc  render.cc  run.sh
.cache/clangd/index/: main.cc.196EEBA4188C155E.idx
src/: CMakeLists.txt  Justfile  main.cc  probe.cc
